--- a/style.css
+++ b/style.css
@@ -24,10 +24,16 @@ body {
 .button {
     height: 50px;
     width: 50px;
-    background-color: yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid yellow;
+    transform: scale(1.5);
+    background-color: white;
     border-radius: 50%;
     color: #1C1C1C;
-    font-size: 1rem;
+    font-size: 2rem;
+    font-weight: bold; 
 }
 
 .lottery {
@@ -35,11 +41,13 @@ body {
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: yellow;
+    background-color: white;
     color: #1C1C1C;
     padding: 0.5rem 2rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    border: 2px solid yellow;
     border-radius: 0.5rem;
+    font-weight: bold;
 }
 
 
