--- a/style.css
+++ b/style.css
@@ -33,7 +33,9 @@ body {
     border-radius: 50%;
     color: #1C1C1C;
     font-size: 2rem;
-    font-weight: bold; 
+    font-weight: bold;
+    animation-duration: 1s;
+    animation-delay: 2s;
 }
 
 .lottery {
